--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -112,7 +112,7 @@
             </div>
             <div class="feedback">
                 <img src="https://github.com/diogofpacheco/diogofpacheco.github.io/blob/master/teaching/ltn/ltn-qr-code.png?raw=true" alt="QR Code for Feedback">
-                <a href="https://twitter.com/" target="_blank">Share your thoughts on X</a>
+                <a href="https://twitter.com/intent/tweet?text=Interesting%20project%20by%20students%20%40UniofExeter%20and%20%40RAMMuseum%20to%20simulate%20%23LTN.%20More%20info%20at%20https%3A%2F%2Fdiogofpacheco.github.io%2Fteaching%2Fltn%2Fltn.html" target="_blank">Share your thoughts on X</a>
             </div>
         </div>
     </div>
