--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -108,7 +108,7 @@
             </div>
             <div class="details">
                 <p>This video shows a simulation tool that allows you to analyse different setups for Low Traffic Neighbourhoods (LTNs). You can see how different LTN designs affect things like pollution levels, travel distances, and other measures of quality of life in the area. Watch the creation of Low Traffic Neighbourhood designs and see which ones you think are better.</p>
-                <p>Developed by: Scott Deverinne, Ahmad Hussain, Zdenek Plesek, Tomas Muniagurria, Ted Proctor, Oscar Rilot, and Diogo Pacheco.</p>
+                <p>Developed by: Tomas Premoli Muniagurria, Zdenek Plesek, Scott Deverinne, Ahmad Hussain, Ted Proctor, Oscar Rilot, and Diogo Pacheco.</p>
             </div>
             <div class="feedback">
                 <img src="https://github.com/diogofpacheco/diogofpacheco.github.io/blob/master/teaching/ltn/ltn-qr-code.png?raw=true" alt="QR Code for Feedback">
