--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -39,12 +39,39 @@
             margin-right: 10px;
         }
         .video {
+            position: relative;
             margin-bottom: 20px;
             width: 100%;
         }
         iframe {
             width: 100%;
             height: 60vh; /* Increased height */
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            z-index: 1;
+        }
+        .controls {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+        .controls button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 5px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .controls button:hover {
+            background-color: #0056b3;
         }
         .link-section {
             display: flex;
@@ -91,6 +118,42 @@
             }
         }
     </style>
+    <script>
+        function onYouTubeIframeAPIReady() {
+            var player;
+            player = new YT.Player('youtube-video', {
+                events: {
+                    'onReady': onPlayerReady
+                }
+            });
+
+            function onPlayerReady(event) {
+                var playButton = document.getElementById("play-button");
+                var pauseButton = document.getElementById("pause-button");
+                var forwardButton = document.getElementById("forward-button");
+                var backwardButton = document.getElementById("backward-button");
+
+                playButton.addEventListener("click", function() {
+                    player.playVideo();
+                });
+
+                pauseButton.addEventListener("click", function() {
+                    player.pauseVideo();
+                });
+
+                forwardButton.addEventListener("click", function() {
+                    var currentTime = player.getCurrentTime();
+                    player.seekTo(currentTime + 10);
+                });
+
+                backwardButton.addEventListener("click", function() {
+                    var currentTime = player.getCurrentTime();
+                    player.seekTo(currentTime - 10);
+                });
+            }
+        }
+    </script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
     <div class="container">
@@ -99,7 +162,14 @@
             <h1>Low-Traffic Neighborhood (LTN) Simulator</h1>
         </div>
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/-jr7uhcYb6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="youtube-video" src="https://www.youtube-nocookie.com/embed/-jr7uhcYb6s?enablejsapi=1&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="overlay"></div>
+        </div>
+        <div class="controls">
+            <button id="play-button">Play</button>
+            <button id="pause-button">Pause</button>
+            <button id="forward-button">Forward 10s</button>
+            <button id="backward-button">Backward 10s</button>
         </div>
         <div class="link-section">
             <div class="link">
@@ -112,7 +182,7 @@
             </div>
             <div class="feedback">
                 <img src="https://github.com/diogofpacheco/diogofpacheco.github.io/blob/master/teaching/ltn/ltn-qr-code.png?raw=true" alt="QR Code for Feedback">
-                <a href="https://twitter.com/intent/tweet?text=Interesting%20project%20by%20students%20%40UniofExeter%20and%20%40RAMMuseum%20to%20simulate%20%23LTN.%20More%20info%20at%20https%3A%2F%2Fdiogofpacheco.github.io%2Fteaching%2Fltn%2Fltn.html" target="_blank">Share your thoughts on X</a>
+                <a href="https://twitter.com/" target="_blank">Share your thoughts on X</a>
             </div>
         </div>
     </div>
