--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -99,7 +99,7 @@
             <h1>Low-Traffic Neighborhood (LTN) Simulator</h1>
         </div>
         <div class="video">
-            <iframe src="https://universityofexeteruk-my.sharepoint.com/personal/d_pacheco_exeter_ac_uk/_layouts/15/embed.aspx?UniqueId=5ba3e816-fc1b-4811-8826-dd6e250dea88&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" frameborder="0" scrolling="no" allowfullscreen title="shortervers.mov"></iframe>
+            <iframe src="https://universityofexeteruk-my.sharepoint.com/personal/d_pacheco_exeter_ac_uk/_layouts/15/embed.aspx?UniqueId=5ba3e816-fc1b-4811-8826-dd6e250dea88&nav=%7B%22playbackOptions%22%3A%7B%22startTimeInSeconds%22%3A0%7D%7D&embed=%7B%22af%22%3Atrue%2C%22hvm%22%3Atrue%2C%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" frameborder="0" scrolling="no" allowfullscreen title="shortervers.mov"></iframe>
         </div>
         <div class="link-section">
             <div class="link">
