--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -24,6 +24,8 @@
             width: 90%; /* Increased width */
             max-width: 1200px; /* Max width */
             margin: 20px;
+            background-color: white; /* Container background color */
+            color: #003c3c; /* Text color inside container */
         }
         h1 {
             margin-bottom: 20px;
@@ -41,10 +43,16 @@
         .video {
             margin-bottom: 20px;
             width: 100%;
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
         }
-        iframe {
+        .video iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 60vh; /* Increased height */
+            height: 100%;
         }
         .link-section {
             display: flex;
@@ -99,7 +107,7 @@
             <h1>Low-Traffic Neighborhood (LTN) Simulator</h1>
         </div>
         <div class="video">
-            <iframe src="https://universityofexeteruk-my.sharepoint.com/personal/d_pacheco_exeter_ac_uk/_layouts/15/embed.aspx?UniqueId=5ba3e816-fc1b-4811-8826-dd6e250dea88&nav=%7B%22playbackOptions%22%3A%7B%22startTimeInSeconds%22%3A0%7D%7D&embed=%7B%22af%22%3Atrue%2C%22hvm%22%3Atrue%2C%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" frameborder="0" scrolling="no" allowfullscreen title="shortervers.mov"></iframe>
+            <iframe src="https://drive.google.com/file/d/1xV2x9bKvSrXCewocFDCZ_1Fx26d37Mvd/preview" allow="autoplay"></iframe>
         </div>
         <div class="link-section">
             <div class="link">
@@ -112,7 +120,7 @@
             </div>
             <div class="feedback">
                 <img src="https://github.com/diogofpacheco/diogofpacheco.github.io/blob/master/teaching/ltn/ltn-qr-code.png?raw=true" alt="QR Code for Feedback">
-                <a href="https://twitter.com/intent/tweet?text=Interesting%20project%20by%20students%20%40UniofExeter%20and%20%40RAMMuseum%20to%20simulate%20%23LTN.%20More%20info%20at%20https%3A%2F%2Fdiogofpacheco.github.io%2Fteaching%2Fltn%2Fltn.html" target="_blank">Share your thoughts on X</a>
+                <a href="https://twitter.com/" target="_blank">Share your thoughts on X</a>
             </div>
         </div>
     </div>
