--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@ ga('send', 'pageview');
 </script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CEBQZB8TLK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-CEBQZB8TLK');
+</script>
 <body>
 
 <!-- header-wrap -->
