--- a/teaching/ltn/ltn.html
+++ b/teaching/ltn/ltn.html
@@ -100,6 +100,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CEBQZB8TLK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CEBQZB8TLK');
+</script>
 <body>
     <div class="container">
         <div class="logo">
